fix: java 8 .collect(Collectors.toList()))